# training_backup

Training_project-backup2/: 29_9_patch.patch  4_10_patch.patch  CMakeLists.txt  backUp
Training_project-backup2/Debug/: makefile  sources.mk
Training_project-backup2/Debug/googleTestLib/gtest/: gtest-all.d  subdir.mk
Training_project-backup2/Debug/src/: Training_Project.d  ceo.d  company.d  department.d  developer.d  employee.d  hr.d  manager.d  person.d  subdir.mk  team_lead.d  tester.d
Training_project-backup2/headers/: ceo.h  company.h  department.h  developer.h  employee.h  hr.h  manager.h  person.h  team_lead.h  tester.h
Training_project-backup2/src/: Training_Project.cpp  ceo.cpp  company.cpp  department.cpp  developer.cpp  employee.cpp  hr.cpp  manager.cpp  person.cpp  team_lead.cpp  tester.cpp
